don't prevent keyboard on mobile

--- a/style/app.css
+++ b/style/app.css
@@ -31,7 +31,7 @@ html, body {
   outline: 0;
 }
 
-*, *:focus {
+button, button:focus {
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
@@ -39,13 +39,6 @@ html, body {
   user-select: none;
 }
 
-input, input:focus {
-  -webkit-user-select: all;
-  -khtml-user-select: all;
-  -moz-user-select: all;
-  -ms-user-select: all;
-  user-select: all;
-}
 
 body > h1 {
   font-size:110%;
